fix TransfareState, localstorage request only if platform browser, contrast

--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -63,6 +63,7 @@
 
                 fa-icon {
                     margin-right: 0.5em;
+                    font-size: 1.4em;
                 }
             }
 
