--- a/src/app/routes/blog-post/blog-post.component.scss
+++ b/src/app/routes/blog-post/blog-post.component.scss
@@ -74,12 +74,8 @@
             padding-left: 1.5em;
         }
 
-        h2, h3 {
-            color: #6262cf;
-        }
-
-        a {
-            color: #6262cf;
+        h2, h3, a {
+            color: #8888ff;
         }
 
         pre {
